@@ -50,7 +50,7 @@ class ChannelSession extends Channel{
 //  }
 
   public void run(){
-    thread=this;
+    thread=Thread.currentThread();
     Buffer buf=new Buffer();
     Packet packet=new Packet(buf);
     int i=0;
