@@ -116,7 +116,7 @@ System.out.println("");
   }
 
   public void run(){
-    thread=this;
+    thread=Thread.currentThread();
     Buffer buf=new Buffer(rmpsize);
     Packet packet=new Packet(buf);
     int i=0;
